syntax = "proto3";
option  java_package = "org.cse535.proto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";



service LinearPBFT {
  rpc Request(TransactionInputConfig) returns (TxnResponse) {}
  rpc CrossShardRequest(TransactionInputConfig) returns (CrossTxnResponse) {}

  rpc PrePrepare(PrePrepareRequest) returns (PrePrepareResponse) {}
  rpc Prepare(PrepareRequest) returns (PrepareResponse) {}
  rpc Commit(CommitRequest) returns (CommitResponse) {}


  rpc Sync(PrepareRequest) returns (PrepareResponse) {}
  rpc ExecReply(ExecutionReply) returns (google.protobuf.Empty) {}


  rpc ReShardingInitiation(google.protobuf.Empty) returns ( ReShardingInitData ) {}
  rpc ReShardingProcess(ReShardingData) returns (CommandOutput) {}

}


service ActivateServers{
  rpc activateServer(ActivateServerRequest) returns (ActivateServerResponse) {}
  rpc deactivateServer(DeactivateServerRequest) returns (DeactivateServerResponse) {}

  rpc makeByzantine(CommandInput) returns(google.protobuf.Empty) {}
  rpc makeHonest(CommandInput) returns(google.protobuf.Empty) {}

}

service Commands{
  rpc printBalance(CommandInput) returns (CommandOutput) {}
  rpc printLog(CommandInput) returns (CommandOutput) {}
  rpc printDB(CommandInput) returns (CommandOutput) {}
  rpc Performance(CommandInput) returns (CommandOutput) {}
  rpc printDatastore(CommandInput) returns (CommandOutput) {}
}



message TransactionInputConfig{

  int32 setNumber = 1;
  Transaction transaction = 2;
  int32 view = 3;
  repeated string serverNames = 5;

}

message Transaction {

  int32 sender = 1;
  int32 receiver = 2;
  int32 amount = 3;

  int32 receiver2 = 8;

  google.protobuf.Timestamp timestamp = 4;

  string transactionHash = 5;
  int32 transactionNum = 6;

  bool isCrossShard = 7;
}

message TxnResponse{
  bool success = 1;
  string serverName = 2;
}

message CrossTxnResponse{
  bool success = 1;
  string serverName = 2;
  int32 ballotNumber = 3;

  int32 clusterId = 6;

  int32 successPreparesCount = 4;
  string failureReason = 5;
}

enum TransactionStatus{
  None = 0;
  REQUESTED = 1;
  PrePREPARED = 2;
  PREPARED = 3;
  COMMITTED = 4;
  EXECUTED = 5;
  ABORTED = 6;
  PENDING = 7;
  ACCEPTED = 8;
}




message PrePrepareRequest {
  int32 view = 1;
  int32 sequenceNumber = 2;
  Transaction transaction = 3;
  string processId = 4;
  google.protobuf.Timestamp timestamp = 5;
  string digest = 6;

  int32 clusterId = 7;
}

message PrePrepareResponse {
  int32 view = 1;
  int32 sequenceNumber = 2;
  string processId = 3;
  bool success = 4;

  int32 clusterId = 5;


  map<int32, Transaction> syncTransactionsMap = 8;
  map<int32, TransactionStatus> syncTransactionStatusMap = 9;
  map<int32, int32> syncBalancesMap = 10;

  string acceptedServerName = 11; //Current server name


  bool needToSync = 12;
  int32 latestBallotNumber = 13;

}



message PrepareRequest {
  int32 view = 1;
  int32 sequenceNumber = 2;
  string processId = 3;
  google.protobuf.Timestamp timestamp = 4;
  string digest = 5;
  Transaction transaction = 6;
  int32 clusterId = 7;
}

message PrepareResponse {
  int32 view = 1;
  int32 sequenceNumber = 2;
  string processId = 3;
  bool success = 4;

  int32 clusterId = 5;

}



message CommitRequest {
  int32 view = 1;
  int32 sequenceNumber = 2;
  string processId = 3;
  google.protobuf.Timestamp timestamp = 4;
  string digest = 5;
  int32 clusterId = 6;
  bool abort = 7;
  Transaction transaction = 8;
}


message CommitResponse {
  int32 view = 1;
  int32 sequenceNumber = 2;
  string processId = 3;
  bool success = 4;
}


message ExecutionReply{

  int32 view = 1;
  int32 sequenceNumber = 2;
  string processId = 3;
  int32 transactionId = 5;
  google.protobuf.Timestamp timestamp = 4;
  bool success = 6;

  string status = 9;

  int32 clusterId = 7;
  string failureReason = 8;

}


message ViewChangeRequest {
  int32 view = 1;
  string processId = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message ViewChangeResponse {
  int32 view = 1;
  string processId = 2;
  bool success = 3;
}

message NewViewRequest {
  int32 view = 1;
  string processId = 2;
  google.protobuf.Timestamp timestamp = 3;

  repeated ViewChangeRequest viewChangeMessages = 4;
  repeated PrepareRequest prepareMessages = 5;
}

message NewViewResponse {
  int32 view = 1;
  string processId = 2;
  bool success = 3;
}


message ActivateServerRequest{
  string serverName = 1;
  int32 testCase = 2;
}

message ActivateServerResponse{
  bool success = 1;
  string serverName = 2;
}

message DeactivateServerRequest{
  string serverName = 1;
  int32 testCase = 2;
}

message DeactivateServerResponse{
  bool success = 1;
  string serverName = 2;
}










message CommandInput{
  string input = 1;
}

message CommandOutput{
  string output = 1;
}



message ReShardingInitData{
  int32 clusterId = 1;
  map<int32, int32> accountBalances = 2;
}

message ReShardingData{
  int32 clusterId = 1;
  map<int32, int32> accountBalances = 2;
  map<int32, int32> newDataItemClusterConfig = 3;
}
